Updated FlatLaf version and add support for OS file chooser